working touch version

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -16,7 +16,6 @@
 
 html{
 	background:url('../img/bg.png') repeat #e4e4e4;
-
 	/* This will hide the extra canvas if the screen is small */
 	overflow:hidden;
 }
@@ -24,6 +23,7 @@ html{
 body{
 	font:14px/1.3 'Segoe UI',Arial, sans-serif;
 	color:#444;
+	touch-action: none;
 }
 
 a, a:visited {
@@ -44,17 +44,27 @@ section, footer, header{
 	Main Area
 --------------------------*/
 
-#img-bg {
+#img {
 	background: url('../img/segmentationoutput.png') no-repeat top left;
+	/* display: none; */
 	position: absolute;
-	z-index: 0;
+	z-index: -5;
 	left: 0;
 	top: 0;
+	opacity: 0;
+}
+
+#imgcanvas {
+	position: absolute;
+	z-index: -4;
+	left: 0;
+	top: 0;
+	opacity: 0.8;
 }
 
 #paper {
 	position: absolute;
-	z-index: 1;
+	z-index: -3;
 	left: 0;
 	top: 0;
 }
@@ -64,6 +74,7 @@ section, footer, header{
 	top: 10px;
 	left: 10px;
 	z-index: 3;
+	right: 10px;
 }
 
 button {
@@ -71,22 +82,24 @@ button {
 	border-radius: 5px;
 	padding: 5px;
 	font-weight: bold;
+	color: white;
+	background: #424242;
 }
 
-button:hover, button:active {
-	background: white;
-}
-
-button.active {
-	background: white;
+button:hover, button:active, button.active {
+	border-style:inset;
 }
 
 button#fg {
-	border-color: #00f662;
+	border-color: #e47600;
 }
 
 button#bg {
 	border-color: #0076e4;
+}
+
+button#clearall {
+	float: right;
 }
 
 hgroup{
